style.css
/* ... */
.entry-content > p {
    /* Turned off first-line indent. Uncomment below to turn back on */
    /* text-indent: 1.25rem; */
}
/*
* Code blocks 
*/
.entry-content pre {
    background-color: rgba(222, 222, 222, 0.45);
    color: black;
    padding: 2px 0px 2px 10px;
}
/* Emulate z-depth-3 on all code blocks */
article pre {
    -webkit-box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
    box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
}
/* Wrapping (word-break) code blocks */
pre.wrap, pre.wrap > code, pre.noScroll, pre.noScroll > code {
    word-break: break-word;
    overflow-x: visible;
    white-space: pre-wrap;
}
/* Fix for content overflowing the body */
.entry-content p > iframe {
    max-width: 100%;
}
.entry-content pre {
    max-width: 100%;
    overflow-x: auto;
}
.entry-content a > img[class*="wp-image-"] {
    max-width: 100%;
    height: auto;
}
/* Disable materialize styling for Github gist embeds */
.gist tr {
    border-bottom: inherit;
}

#maingallery {
    width:100%;
    text-align:center;
    padding-top: 40px;
}

.spacer {
    background-color:#FFF;
    height:20%;
    min-height:20px;
    width:100%;
}
#site {
    text-align:center;
    width:30%;
    display:inline-block;
    padding:15px;
}



div.Promo_Image_Wrapper img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 900px;
    width: 95%;
}
div.Promo_Image_Wrapper > a {
    display: inline-block;
}

.hero_image_wrapper {
    width: 100%;
    text-align: center;
}
.hero_image_wrapper > img {
    width: 100%;
    height: auto;
}
div#main_post_wrapper > p {
    padding-left: 20px;
    padding-right: 10px;
}

/**
* Generic Post Listings
*/
.genericPostItem {
    background-color: #efefef80;
    width: 92%;
    margin-left: 4%;
    margin-bottom: 20px;
    padding: 0px 10px;
    border-top: 4px double;
    border-bottom: 4px double;
    border-left: 1px solid;
    border-right: 1px solid;
    border-color: #2e3641;
}
.genericPostItem .featuredImage {
    max-width: 100%;
    width: auto;
    max-height: 500px;
}
.genericPostItem .featuredImageWrapperLink:hover{
    outline-color: rgba(25,0,252,0.5);
    outline-style:solid;
    outline-width:20px;
    outline-offset:-10px;
}
.genericPostItem .postExcerptWrapper {
    background-color: white;
    padding: 20px;
}
.genericPostItem .titleLink {
    color: black;
}
a.readMore {
    margin-top: 30px;
    white-space: nowrap;
}
/**
* Project Listings
*/
.projectListing {
    background: rgba(255, 255, 255, 0.65);
    padding: 10px;
    border-radius: 8px;
    margin: 10px;
}
.tagLink {
    background-color: white;
    border-radius: 10px;
    padding: 4px 8px 2px 4px;
    margin-right: 10px;
    margin-bottom: 7px;
    display: inline-block;
    position: relative;
}
.tagLink .tagText {
    margin-left: -2px;
    display: inline-block;
    top: -5px;
    position: relative;
}
.projectItemWrapper .tagsWrapper {
    border: 1px solid black;
    width: 97%;
    border-top-right-radius: 0px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 60px;
    background-color: #a3bfe1;
    padding: 65px 2px 2px 4px;
    margin: -80px auto 10px 1px;
    z-index: 1;
}
.projectItem {
    background-color:#A3BFE1;
    padding-bottom:30px;
    padding-top:10px;
    margin-bottom: 20px;
    margin-left: auto;
    margin-right: auto;
    min-width: 200px;
    border-top-left-radius: 60px;
    border-top-right-radius: 10px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 60px;
    border-style: solid;
    border-color: #2e3641;
    border-width: 2px;
    z-index: 2;
    position: relative;
    /* Comment out the below line if you don't care about equal height columns */
    height: 96%;
}
.projectItem.half {
    width: 45%;
}
.projectItem:hover .projectItemTitle {
    color: rgba(25,0,252,0.5);
}
.projectItemTitle {
    color: black;
    border-top: 2px solid rgba(0,0,0,0.2);
    border-bottom: 2px solid rgba(0,0,0,0.2);
    padding: 10px 0px;
    width: 80%;
    margin-left: 10%;
    text-align: center;
    text-decoration: underline;
    text-underline-position: under;
}
.projectItemTitle > a {
    color: #2E3641;
    text-decoration-color: #039be5
}
.projectItem a.projectLinkWrapper {
    width: 70%;
    max-width: 580px;
    margin-left: auto;
    margin-right: auto;
    display: block;
}
.projectExcerptWrapper {
    padding-top:10px;
    width:95%;
    margin-left:auto;
    margin-right:auto;
    margin-top:20px;
    font-family:Georgia, "Times New Roman", Times, serif;
    background-color:#FFF;
    padding:4px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 60px;
    border-style: solid;
    border-color: rgba(46, 54, 65, 0.76);
    border-width: 2px;
}
.projectExcerptWrapper p {
    font-size: 1.2rem;
}
.projectLinkClickPrefix {
    background-color: white;
    width: 100%;
    /* max-width: 300px; */
    margin-left: auto;
    margin-right: auto;
    border-radius: 10px;
    margin-bottom: 7px;
    font-size: 1rem;
    padding: 8px 0px;
}
/**
* Custom Tool Listings
*/
.customToolsListingsWrapper {
    background: rgba(255, 255, 255, 0.45);
    padding: 10px;
    border-radius: 8px;
    margin: 10px;
}
.customToolsMasonry {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: flex-start;
}
.customToolListing {
    /* max-width: 550px; */
    /* float: right !important; */
}
.customToolListing .card-title {
    overflow-x: hidden;
    text-overflow: ellipsis;
}


/** Horizontal Align */
.halign {
    margin-left: auto !important;
    margin-right: auto !important;
    float: inherit !important;
    display: block !important;
}
/* ... */

